hphp/test/vm/parse_fail_shapes2.php.expectf
HipHop Fatal error: Shape key names may not start with integers in %s on line 5
